更新前端組件和頁面，添加 Rust-order 到 .gitignore

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,9 @@ VITE_LOG_LEVEL=info
 
 # 環境標識（用於顯示當前環境，可選：development、staging、production）
 VITE_ENV=development
+
+# 社群媒體連結
+VITE_SOCIAL_GITHUB=https://github.com/your-username/your-repo
+VITE_SOCIAL_TWITTER=https://twitter.com/your-handle
+VITE_SOCIAL_DISCORD=https://discord.com/invite/your-invite
+VITE_SOCIAL_EMAIL=contact@example.com
